Push TopupBalance Task

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Base.Theme.ArtlyMobile"
         tools:targetApi="31">
         <activity
+            android:name=".view.TopupActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.ProductDetailsActivity"
             android:exported="false" />
         <activity
