--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.ArtlyMobile"
         tools:targetApi="31">
+
+        <activity
+            android:name=".view.AccountInformationActivity"
+            android:exported="false" />
         <activity
             android:name=".view.TransactionDetailsActivity"
             android:exported="false" />
